# resource2knowledge

./: .env.example  .gitignore  LICENSE  README.md  README.zh-CN.md  downloader.py  main.py  notion_writer.py  pyproject.toml  requirements.txt  setup.bat  summarizer.py  transcriber.py  transcript_cleaner.py
docs/: architecture.md
src/clipvault/: __init__.py  __main__.py
src/clipvault/cli/: __init__.py
src/clipvault/config/: __init__.py  runtime.py  settings.py
src/clipvault/domain/: __init__.py  transcript_cleaner.py
src/clipvault/models/: __init__.py  pipeline.py  resource.py  summary.py  transcript.py
src/clipvault/platform/: __init__.py
src/clipvault/providers/: __init__.py  base.py
src/clipvault/providers/download/: ytdlp.py
src/clipvault/providers/storage/: json_local.py  notion.py
src/clipvault/providers/summarization/: ollama_local.py  openai_cloud.py
src/clipvault/providers/transcription/: openai_cloud.py  whisper_local.py
src/clipvault/services/: __init__.py  checkpoint.py  factory.py  pipeline.py
src/clipvault/skill/: __init__.py
tests/: conftest.py  test_checkpoint.py  test_cleaner.py  test_cli.py  test_config.py  test_factory.py  test_models.py  test_pipeline.py  test_skill.py
